BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Retargeting_Hospital_BMS_CN__c.object
<CustomObject>
    <description>Next Month Target Hospital for China</description>
    <fields>
        <fullName>Account_BMS_CN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hospital</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>BMS - Institution</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Target_Hospital</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active_BMS_CN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active Flag</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_ID_BMS_CN__c</fullName>
        <description>Master ID of hospital</description>
        <label>Master ID</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_BMS_CN__c</fullName>
        <description>Period</description>
        <label>Period</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_BMS_CN__c</fullName>
        <description>Territory</description>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Retargeting Hospital</label>
    <nameField>
        <label>Hospital</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retargeting Hospitals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>